syntax = "proto3";

package file.service.v1;
option go_package = "kratos-blog/api/file/service/v1";

import "google/protobuf/empty.proto";
import "pagination.proto";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 附件服务
service AttachmentService {
  // 获取附件列表
  rpc ListAttachment (pagination.PagingRequest) returns (ListAttachmentResponse) {}

  // 获取附件数据
  rpc GetAttachment (GetAttachmentRequest) returns (Attachment) {}

  // 创建附件
  rpc CreateAttachment (CreateAttachmentRequest) returns (Attachment) {}

  // 更新附件
  rpc UpdateAttachment (UpdateAttachmentRequest) returns (Attachment) {}

  // 删除附件
  rpc DeleteAttachment (DeleteAttachmentRequest) returns (google.protobuf.Empty) {}
}

message Attachment {
  uint32 id = 1;
  optional string name = 2;
  optional string path = 3;
  optional string fileKey = 4;
  optional string thumbPath = 5;
  optional string mediaType = 6;
  optional string suffix = 7;
  optional int32 width = 8;
  optional int32 height = 9;
  optional int64 size = 10;
  optional int32 type = 11;
  optional string createdAt = 12;
  optional string updatedAt = 13;
  optional string deletedAt = 14;
}

// 回应 - 附件列表
message ListAttachmentResponse {
  repeated Attachment items = 1;
  int32 total = 2;
}

// 请求 - 附件数据
message GetAttachmentRequest {
  uint32 id = 1;
}

// 请求 - 创建附件
message CreateAttachmentRequest {
  Attachment attachment = 1;
  optional uint32 operatorId = 2;
}

// 请求 - 更新附件
message UpdateAttachmentRequest {
  uint32 id = 1;
  Attachment attachment = 2;
  optional uint32 operatorId = 3;
}

// 请求 - 删除附件
message DeleteAttachmentRequest {
  uint32 id = 1;
  optional uint32 operatorId = 2;
}
